--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -16,7 +16,7 @@ on:
 env:
   AZURE_WEBAPP_NAME: DotNetDemoApp    # set this to your application's name
   AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
-  DOTNET_VERSION: '2.2.402'           # set this to the dot net version to use
+  DOTNET_VERSION: '9.0.x'           # set this to the dot net version to use
 
 jobs:
   build-and-deploy:
